<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myradio="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawerActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- The main content view -->
        <LinearLayout
            android:id="@+id/aboveLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/bg_tille"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="3dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imgv_main"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/min" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_index_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shangcheng"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right">

                    <TextView
                        android:id="@+id/tv_top_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/fragmentRoot"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:orientation="vertical">

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/bottomList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/bg_tab"
                    android:orientation="horizontal">

                    <com.yunsu.chen.ui.MyRadioButton
                        android:id="@+id/rbWeiXin"
                        style="@style/daohang_tab"
                        android:checked="true"
                        android:background="@drawable/selector_bg_daohang_tab"
                        android:text="@string/tab1"
                        android:textColor="@drawable/selector_daohang_tab_text"

                        myradio:drawableTop="@drawable/selector_daohang_tab1"
                        myradio:mydrawableSize="20dp"/>


                    <com.yunsu.chen.ui.MyRadioButton
                        android:id="@+id/rbAddress"
                        style="@style/daohang_tab"
                        android:checked="false"
                        android:background="@drawable/selector_bg_daohang_tab"
                        android:text="@string/tab2"
                        android:textColor="@drawable/selector_daohang_tab_text"

                        myradio:drawableTop="@drawable/selector_daohang_tab2"
                        myradio:mydrawableSize="20dp"/>

                    <com.yunsu.chen.ui.MyRadioButton
                        android:id="@+id/rbFind"
                        style="@style/daohang_tab"
                        android:checked="false"
                        android:background="@drawable/selector_bg_daohang_tab"
                        android:text="@string/tab3"
                        android:textColor="@drawable/selector_daohang_tab_text"

                        myradio:drawableTop="@drawable/selector_daohang_tab3"
                        myradio:mydrawableSize="20dp"/>

                    <com.yunsu.chen.ui.MyRadioButton
                        android:id="@+id/rbMe"
                        style="@style/daohang_tab"
                        android:checked="false"
                        android:background="@drawable/selector_bg_daohang_tab"
                        android:text="@string/tab4"
                        android:textColor="@drawable/selector_daohang_tab_text"

                        myradio:drawableTop="@drawable/selector_daohang_tab4"
                        myradio:mydrawableSize="20dp"/>

                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <!-- The navigation drawer -->

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:orientation="vertical">

            <include layout="@layout/main_left" />

        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
