<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yunsu.chen.ui.CustomScrollView
        android:id="@+id/custom_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llAdvertiseBoard"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- 栏目1 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_menu1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/menu1_rural"
                        android:layout_marginBottom="3dp"/>

                    <TextView
                        android:id="@+id/tv_menu1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu1"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>

                <!-- 栏目2 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_menu2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/menu2_hotel"
                        android:layout_marginBottom="3dp"/>

                    <TextView
                        android:id="@+id/tv_menu2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu2"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>

                <!-- 栏目3 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_menu3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/menu3_restaurant"
                        android:layout_marginBottom="3dp"/>

                    <TextView
                        android:id="@+id/tv_menu3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu3"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>

                <!-- 栏目4 -->
                <LinearLayout
                    android:id="@+id/ly_fragment4_lanmu4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_menu4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/menu4_shop"
                        android:layout_marginBottom="3dp"/>

                    <TextView
                        android:id="@+id/tv_menu4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu4"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>

                <!-- 栏目5 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_menu5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/menu5_travel"
                        android:layout_marginBottom="3dp"/>

                    <TextView
                        android:id="@+id/tv_menu5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu5"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/listview_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/white"
                android:dividerHeight="5dp"
                android:background="@color/white"
                android:scrollbars="none" />
        </LinearLayout>
    </com.yunsu.chen.ui.CustomScrollView>

</LinearLayout>